fixed some white space in the header section

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -7,11 +7,13 @@
     align-items: center;
     flex-basis: 1;
     padding-top: 2%;
-    margin-right: 2rem;
+    padding-right: 2%;
+    width: 100%;
 }
 
 
 .header h1 {
+   
     padding-left: 1rem;
 }
 
